--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -21,5 +21,17 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+
+      <activity
+        android:name="com.zoontek.rnbootsplash.RNBootSplashActivity"
+        android:theme="@style/BootTheme"
+        android:exported="true"
+        android:launchMode="singleTask">
+          <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category 
+              android:name="android.intent.category.LAUNCHER"/>
+          </intent-filter>
+        </activity>
     </application>
 </manifest>
