--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react": "18.2.0",
     "react-native": "0.71.1",
     "react-native-bootsplash": "^4.5.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-otp-textinput": "^1.0.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
     "react-native-vector-icons": "^9.2.0",
