--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-firebase/app": "^17.3.2",
+    "@react-native-firebase/auth": "^17.3.2",
     "@react-navigation/bottom-tabs": "^6.5.6",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
@@ -20,6 +22,7 @@
     "react-native-bootsplash": "^4.5.0",
     "react-native-modal": "^13.0.1",
     "react-native-otp-textinput": "^1.0.0",
+    "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
     "react-native-vector-icons": "^9.2.0",
